Allow system level base url to be overriden
This is for users that would like to preserve their system level base
url, but allow remote servers to connect via a public/external facing
url. This feature will be typically used by jira server users with strict
firewall settings. Most will accept their default system base url and
refrain from overriding it.

--- a/src/main/resources/minhhai2209/jirapluginconverter/i18n/messages.properties
+++ b/src/main/resources/minhhai2209/jirapluginconverter/i18n/messages.properties
@@ -5,9 +5,10 @@ plugin.configuration.error.text=Invalid configuration
 plugin.configuration.error.expander.more=show more
 plugin.configuration.error.expander.less=show less
 plugin.configuration.success=Configuration has been saved successfully.
-plugin.configuration.instruction=If you are using InVision Private Cloud you need to update the Server URL with corresponding value https://integration.<My Company>.invisionapp.com
-plugin.configuration.url.label=Server URL
-plugin.configuration.url.description=(without trailing slashes, e.g. https://integration.<My Company>.invisionapp.com for Private Cloud users or https://integration.invisionapp.com in other cases)
+plugin.configuration.url.label=Scenario Server Base URL
+plugin.configuration.url.description=For on-premise users, this should be the value of the url variable from the scenario section of your qtest.config file. On-demand users should use the url of their target AWS Region (e.g. us-east-1).
+plugin.configuration.baseurl.label=Jira Server Base URL
+plugin.configuration.baseurl.description=Use this value to override your Jira instance''s base url. This should be exercised for clients that want to preserve their internal (private) base url, but allow Scenario to connect to their Jira instance via an external (public) base url.
 plugin.configuration.user.label=User
 plugin.configuration.user.description=(add-on will update JIRA on behalf of this user)
 plugin.configuration.save=Save configuration
